IDLER: added Makefile and some commands
