# docs/swagger.json
@@ -323,8 +323,13 @@
         "http.errorResponse": {
             "type": "object",
             "properties": {
+                "errorTime": {
+                    "type": "string",
+                    "example": "2022-06-07 22:22:20"
+                },
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Token is expired"
                 }
             }
         }
