# internal/transport/http/error-response.go
@@ -11,8 +11,8 @@ const (
 )
 
 type errorResponse struct {
-	ErrorTime string `json:"errorTime"`
-	Message   string `json:"message"`
+	ErrorTime string `json:"errorTime" example:"2022-06-07 22:22:20"`
+	Message   string `json:"message" example:"Token is expired"`
 }
 
 func newErrorResponse(c *gin.Context, statusCode int, message string) {
